# synth-datagen

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  SECURITY.md  audit_report.md  conftest.py  mkdocs.yml  pyproject.toml  quick_guide_README.md  requirements.txt  run_demo.py
.github/workflows/: ci.yml  docs.yml
checkpoints/: CHECKPOINT_synth-datagen_2026-05-07_v1.md  README.md
configs/: kupferkanne_rfm_v3.yaml  monthly_sales.audit_growth_2023_2026.yaml  saas_v3.audit_093.yaml  saas_v3.default.yaml  saas_v3.plg.yaml  saas_v3.smoke.yaml
docs/: changelog.md  index.md  quickstart.md
docs/api/: reference.md
docs/architecture/: distributions.md  quality-injection.md  rng-isolation.md
docs/recipes/: bigquery-loading.md  postgres-loading.md  powerbi-loading.md
docs/scenarios/: fintech.md  index.md  logistics.md  pharma.md  retail.md  saas.md
docs/superpowers/plans/: 2026-05-07-saas-extension-v0-2-1.md
examples/: README.md  kupferkanne_full.py  pharma_medicorp.py  quickstart_retail.py  quickstart_saas.py
memory/: README.md  cli-tests-ansi-on-ci.md  cross-platform-python-path.md  precommit-checkyaml-mkdocs.md  pydantic-v2-validator-assignment.md  ruff-pin-coupling.md  spawn-slot-pattern.md  version-coupling.md
prompts/: 00_master.md
prompts/audit/: 01_handoff.md  02_workflow.md  phase1_audit.md  phase2_refactor.md  phase3_tests.md  phase4_docs.md
prompts/pharma/: 04_integration_notes.md  05_implementation.md
prompts/saas/: 03_extension.md
scripts/: baseline_diff.py  generate_monthly_sales.py
src/: config.py  kupferkanne_rfm.py  kupferkanne_rfm_config.py  main.py  monthly_sales.py  pipeline.py  reporting.py  runtime_support.py  utils.py
src/exporters/: csv_exporter.py  parquet_exporter.py
src/saas_v3/: __init__.py  engine.py
src/synth_datagen/: __init__.py  cli.py  config.py  discounts.py  geo.py  id_utils.py  kupferkanne_rfm.py  kupferkanne_rfm_cli.py  kupferkanne_rfm_config.py  main.py  monthly_sales.py  monthly_sales_audit.py  monthly_sales_cli.py  monthly_sales_profile.py  pipeline.py  reporting.py  rng.py  runtime_support.py  schema_builder.py  utils.py
src/synth_datagen/exporters/: __init__.py  csv_exporter.py  parquet_exporter.py  sql_exporter.py  sqlite_exporter.py
src/synth_datagen/generators/: __init__.py  base.py  fintech.py  logistics.py  retail.py  retail_builder.py  saas.py
src/synth_datagen/pharma/: __init__.py  benchmarks.py  cli.py  config.py  defects.py  engine.py  validate.py  vocab.py
src/synth_datagen/saas_v3/: cli.py  config.py  defects.py  engine.py  exporters.py  ids.py  validate.py  vocab.py
tasks/: refactor_log.md
tests/: conftest.py  helpers.py  test_baseline_diff_pharma.py  test_cli_startup.py  test_csv_byte_equality.py  test_determinism.py  test_discount_propensity.py  test_dq_safety.py  test_exporters.py  test_fintech_determinism.py  test_fintech_leap_day.py  test_fintech_realism.py  test_helpers.py  test_id_standards.py  test_integrity.py  test_kupferkanne_cohort_retention_stable.py  test_kupferkanne_discount_variation.py  test_kupferkanne_partial_month_scaling.py  test_kupferkanne_rfm_cli.py  test_kupferkanne_rfm_config.py  test_kupferkanne_rfm_generation.py  test_kupferkanne_rfm_packaging.py  test_logistics_determinism.py  test_logistics_realism.py  test_monthly_sales_cli_profile.py  test_monthly_sales_config.py  test_monthly_sales_generation.py  test_monthly_sales_resume.py  test_parquet_exporter.py  test_precommit_lock_consistency.py  test_regressions.py  test_retail_discount_variation.py  test_retail_realism.py  test_rng_factory.py  test_saas_empty_feature_pool.py  test_saas_realism.py  test_saas_v3_benchmarks.py  test_saas_v3_cli.py  test_saas_v3_cli_unit.py  test_saas_v3_config.py  (+7 more)
tests/fixtures/pharma/: README.md  bundeslaender_test.geojson  landkreise_test.geojson  osm_hospitals_DE_test.csv
tests/pharma/: README.md  test_benchmarks.py  test_cli.py  test_config.py  test_defects.py  test_engine_smoke.py  test_fixtures_structural.py  test_geo.py  test_validate.py  test_vocab.py
tests/property/: _helpers.py  conftest.py  test_fintech_invariants.py  test_kupferkanne_rfm_invariants.py  test_logistics_invariants.py  test_pharma_invariants.py  test_retail_invariants.py  test_saas_invariants.py  test_saas_v3_invariants.py
