[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synth-datagen"
version = "0.2.0-dev"
description = "Synthetic dataset generator with production-style IDs, realistic cross-table rules, and audit-grade validations"
requires-python = ">=3.11"
authors = [{ name = "Data Engineer" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["synthetic-data", "data-engineering", "sql", "power-bi", "faker"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "faker>=24.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pyarrow>=15.0.0",
    "PyYAML>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
# Single development/test extra. Renamed from `dev` to `test` in Phase 3 (P1-10)
# so the install string `pip install -e ".[test]"` matches the canonical Phase 3
# spec and the CI matrix in .github/workflows/ci.yml.
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    # Phase 3 additions
    "hypothesis>=6.100.0",       # property-based tests (P3 of operator priority list)
    "ruff>=0.5.0",               # lint + format (P1, P8, P9)
    "bandit>=1.7.0",             # security scan in CI (P8)
    "pre-commit>=3.5.0",         # local hook runner — see .pre-commit-config.yaml (P9)
]

[project.scripts]
synth-datagen = "synth_datagen.cli:app"
# Transitional aliases — kept until the next major version bump so existing
# scripts and CI jobs keep working. Prefer `synth-datagen <subcommand>`.
synthetic-data = "synth_datagen.main:app"
synthetic-monthly-sales = "synth_datagen.monthly_sales_cli:app"
synthetic-saas = "synth_datagen.saas_v3.cli:app"
synthetic-rfm-kupferkanne = "synth_datagen.kupferkanne_rfm_cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["synth_datagen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip slow tests by default so a plain `pytest` invocation finishes inside
# the P6 <60s budget. Run the full suite with `pytest -m slow or not slow`,
# the slow subset only with `pytest -m slow`. CI keeps the full matrix on.
addopts = "-v -m 'not slow'"
markers = [
    "slow: integration / property tests that take more than ~1s each. Run with `pytest -m slow` or include via `pytest -m 'slow or not slow'`.",
]
